Sun Jul 06 17:59:26 BST 2003  Olly Betts <olly@survex.com>

	* docs/scalability.html: Fixed typo.

Sun Jul 06 13:02:09 BST 2003  Olly Betts <olly@survex.com>

	* docs/scalability.html: Fixed typo.

Sun Jul 06 12:56:08 BST 2003  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/index.html,docs/scalability.html: Added new
	  document on Xapian's scalability.

Sun Jul 06 12:15:34 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Made quartz block count unsigned, which should
	  nearly double the size of database for a given block size.

Sun Jul 06 11:47:46 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Use BLK_UNUSED rather than literal -1.

Sun Jul 06 11:47:14 BST 2003  Olly Betts <olly@survex.com>

	* common/utils.h: Fixed last check-in to compile.

Sun Jul 06 11:01:03 BST 2003  Olly Betts <olly@survex.com>

	* common/utils.h,tests/btreetest.cc,tests/quartztest.cc,
	  testsuite/backendmanager.cc: Replaced system("rm -rf ...") with
	  rmdir() function and added two ms windows implementations for
	  Sam to try.

Sat Jul 05 10:37:35 BST 2003  Olly Betts <olly@survex.com>

	* getopt/getopt.c: Suppress "unused variable" warnings from getopt.c.

Sat Jul 05 02:21:11 BST 2003  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Sat Jul 05 02:09:06 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,backends/quartz/btree.cc: Use pread() and pwrite() if
	  available - this avoids one syscall per block read/write.

Fri Jul 04 22:05:14 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS: Added results from building 0.7.0 on my Linux dev box.

Fri Jul 04 18:52:07 BST 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Distribute symboltab.h.

Fri Jul 04 18:04:53 BST 2003  Olly Betts <olly@survex.com>

	* common/Makefile.am: Distribute documentterm.h.

Fri Jul 04 15:30:28 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Disabled guile, tcl8, and php4 here as well as in
	  bindings/Makefile.am.
